<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/textColorSecondary">


    <TextView
        android:id="@+id/StartYear"
        android:layout_width="@dimen/rowDimen"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_weight="1"
        android:text="@string/StartYear"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/OpeningBalance"
        android:layout_width="@dimen/rowDimen"
        android:layout_height="40dp"
        android:layout_column="1"
        android:layout_weight="1"
        android:text="@string/OpeningBalance"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/AmountDeposited"
        android:layout_width="@dimen/rowDimen"
        android:layout_height="40dp"
        android:layout_column="2"
        android:layout_weight="1"
        android:text="@string/AmountDeposited"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/InterestEarned"
        android:layout_width="@dimen/rowDimen"
        android:layout_height="40dp"
        android:layout_column="3"
        android:layout_weight="1"
        android:text="@string/InterestEarned"
        android:textColor="@color/textColor" />


    <TextView
        android:id="@+id/ClosingBalance"
        android:layout_width="@dimen/rowDimen"
        android:layout_height="40dp"
        android:layout_column="4"
        android:layout_weight="1"
        android:text="@string/ClosingBalance"
        android:textColor="@color/textColor" />


</LinearLayout>