<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_ppf_maturity"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/StartYear"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_column="0"
            android:text="@string/StartYear"
            android:textColor="@color/textColor"
            android:layout_width="@dimen/rowDimen"/>

        <TextView
            android:id="@+id/OpeningBalance"
            android:layout_column="1"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/OpeningBalance"
            android:textColor="@color/textColor"
            android:layout_width="@dimen/rowDimen"/>

        <TextView
            android:id="@+id/AmountDeposited"
            android:layout_column="2"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/AmountDeposited"
            android:textColor="@color/textColor"
            android:layout_width="@dimen/rowDimen"/>

        <TextView
            android:id="@+id/InterestEarned"
            android:layout_column="3"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/InterestEarned"
            android:textColor="@color/textColor"
            android:layout_width="@dimen/rowDimen"/>


        <TextView
            android:id="@+id/ClosingBalance"
            android:layout_column="4"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/ClosingBalance"
            android:textColor="@color/textColor"
            android:layout_width="@dimen/rowDimen"/>



    </LinearLayout>



            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/tableRow_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>



    <TextView
        android:id="@+id/Amount"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:layout_width="match_parent"/>
    <TextView
        android:id="@+id/TotalInterest"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:layout_width="match_parent"/>

    <TextView
        android:id="@+id/Maturity"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:layout_width="match_parent"/>





</LinearLayout>

</ScrollView>

